upd bunners, fix wido-frame margin and foollow input text align

--- a/css/style.css
+++ b/css/style.css
@@ -314,20 +314,20 @@ a:hover{
  .banner-main{
 	 width: 100%;
 	 height:79vh;
-	 background-image: url('../img/banner/banner.jpg');
 	 background-repeat: no-repeat;
 	 background-position: center;
 	 background-size: cover;
 	 text-align: center;
+	 background-color: #48857d;
  }
  .banner-two{
 	 width: 100%;
 	 height:79vh;
-	 background-image: url('../img/banner/banner_slider.jpg');
 	 background-repeat: no-repeat;
 	 background-position: center;
 	 background-size: cover;
 	 text-align: center;
+	 background-color: #48857d;
  } 
  .banner-two h3, .banner-two p{
 	color: black;
@@ -682,7 +682,7 @@ h2 {
 	margin: 0 auto;
 }
 .video-frame {
-	margin: 0;
+	margin: 30px 0 0;
 	padding: 50px 0;
 	background-image: url('../img/values/frame.png');
 	background-repeat: no-repeat;
@@ -690,8 +690,6 @@ h2 {
 	background-size: contain;
 }
 .video{
-	/* width: 500px;
-	height: 340px; */
 	width: 330px;
 	height: 240px;
 }
@@ -906,11 +904,12 @@ textarea:focus {
 	padding: 0;
 }
 .connect {
-	text-align: center;
-	margin: 0 50px 0 0;
+	text-align: left;
+	margin: 20px 50px 0 0;
 }
 .connect h5 {
 	text-transform: capitalize;
+	text-align: center;
 }
 .our-address {
 	margin: 15px 0;
@@ -948,7 +947,7 @@ textarea:focus {
 	text-align: center;
 	color: #b1b1b1;
 	padding: 0;
-	margin: 0 10px;
+	margin: 0 auto;
 }
 .follow input[type="mail"]:focus {
 	border-bottom: 1px solid #b1b1b1;
